header quote alt

--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -472,13 +472,13 @@
       </table>
     </lp-layout>
     <lp-layout lp-label="Hero">
-      <table align="center" background="images/hero-bg_light.png" border="0" cellpadding="0" cellspacing="0"
+      <table align="center" background="images/hero-bg_light_alt.png" border="0" cellpadding="0" cellspacing="0"
         role="presentation"
-        style="background:url(images/hero-bg_light.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%;background-color:transparent;">
+        style="background:url(images/hero-bg_light_alt.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%;background-color:transparent;">
         <tbody>
           <tr>
             <td>
-              <!--[if mso | IE]><v:rect style="mso-width-percent:980;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg_light.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+              <!--[if mso | IE]><v:rect style="mso-width-percent:980;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg_light_alt.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
               <div style="margin:0 auto;max-width:700px">
                 <div style="font-size:0;line-height:0">
                   <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -1979,7 +1979,8 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="Quote - Wit">
+      </lp-layout>
+      <lp-layout lp-label="Quote - Wit">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
@@ -1992,7 +1993,7 @@
                       style="background:#fff;background-color:#fff;width:100%">
                       <tbody>
                         <tr>
-                          <td style="direction:ltr;font-size:0;padding:8px 24px;text-align:center">
+                          <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
                             <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:652px;" ><![endif]-->
                             <div class="mj-column-per-100 mj-outlook-group-fix"
                               style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
@@ -2009,9 +2010,9 @@
                                                 style="border-collapse:collapse;border-spacing:0">
                                                 <tbody>
                                                   <tr>
-                                                    <td style="width:70px"> <img alt src="images/quote.png"
+                                                    <td style="width:50px"> <img alt src="images/quote_alt.png"
                                                         style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
-                                                        width="70" height="auto"> </td>
+                                                        width="50" height="auto"> </td>
                                                   </tr>
                                                 </tbody>
                                               </table>
@@ -2150,7 +2151,7 @@
                                             <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                               <div
                                                 style="color:#adb5bd;font-family:Mulish,Arial;font-size:14px;font-weight:400;line-height:16px;text-align:left;text-decoration:none">
-                                                <lp-multiline lp-label="Titel"> Functie, Bedrijf</lp-multiline> </div>
+                                                <lp-multiline lp-label="Subtitel"> Functie, Bedrijf</lp-multiline> </div>
                                             </td>
                                           </tr>
                                         </tbody>
@@ -2170,7 +2171,8 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="Quote - Oranje">
+      </lp-layout>
+      <lp-layout lp-label="Quote - Oranje">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
@@ -2183,7 +2185,7 @@
                       style="background:#D3450D;background-color:#D3450D;width:100%">
                       <tbody>
                         <tr>
-                          <td style="direction:ltr;font-size:0;padding:8px 24px;text-align:center">
+                          <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
                             <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:652px;" ><![endif]-->
                             <div class="mj-column-per-100 mj-outlook-group-fix"
                               style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
@@ -2200,9 +2202,9 @@
                                                 style="border-collapse:collapse;border-spacing:0">
                                                 <tbody>
                                                   <tr>
-                                                    <td style="width:70px"> <img alt src="images/quote_white.png"
+                                                    <td style="width:50px"> <img alt src="images/quote_white_alt.png"
                                                         style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
-                                                        width="70" height="auto"> </td>
+                                                        width="50" height="auto"> </td>
                                                   </tr>
                                                 </tbody>
                                               </table>
@@ -2341,7 +2343,7 @@
                                             <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                               <div
                                                 style="color:#f6a98a;font-family:Mulish,Arial;font-size:14px;font-weight:400;line-height:16px;text-align:left;text-decoration:none">
-                                                <lp-multiline lp-label="Titel"> Functie, Bedrijf</lp-multiline> </div>
+                                                <lp-multiline lp-label="Subtitel"> Functie, Bedrijf</lp-multiline> </div>
                                             </td>
                                           </tr>
                                         </tbody>
@@ -2361,7 +2363,8 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="Quote - Blauw">
+      </lp-layout>
+      <lp-layout lp-label="Quote - Blauw">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
@@ -2374,7 +2377,7 @@
                       style="background:#234793;background-color:#234793;width:100%">
                       <tbody>
                         <tr>
-                          <td style="direction:ltr;font-size:0;padding:8px 24px;text-align:center">
+                          <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
                             <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:652px;" ><![endif]-->
                             <div class="mj-column-per-100 mj-outlook-group-fix"
                               style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
@@ -2391,9 +2394,9 @@
                                                 style="border-collapse:collapse;border-spacing:0">
                                                 <tbody>
                                                   <tr>
-                                                    <td style="width:70px"> <img alt src="images/quote_white.png"
+                                                    <td style="width:50px"> <img alt src="images/quote_white_alt.png"
                                                         style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
-                                                        width="70" height="auto"> </td>
+                                                        width="50" height="auto"> </td>
                                                   </tr>
                                                 </tbody>
                                               </table>
@@ -2532,7 +2535,7 @@
                                             <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                               <div
                                                 style="color:#89a3da;font-family:Mulish,Arial;font-size:14px;font-weight:400;line-height:16px;text-align:left;text-decoration:none">
-                                                <lp-multiline lp-label="Titel"> Functie, Bedrijf</lp-multiline> </div>
+                                                <lp-multiline lp-label="Subtitel"> Functie, Bedrijf</lp-multiline> </div>
                                             </td>
                                           </tr>
                                         </tbody>
@@ -2552,7 +2555,8 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="Divider">
+      </lp-layout>
+      <lp-layout lp-label="Divider">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
