quote person image

--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -2075,8 +2075,8 @@
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:24px;text-align:center">
-                            <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:60px;" ><![endif]-->
-                            <div class="mj-column-px-60 mj-outlook-group-fix"
+                            <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:100px;" ><![endif]-->
+                            <div class="mj-column-px-100 mj-outlook-group-fix"
                               style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                               <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                                 <tbody>
@@ -2092,10 +2092,10 @@
                                                 style="border-collapse:collapse;border-spacing:0">
                                                 <tbody>
                                                   <tr>
-                                                    <td style="width:60px"> <img alt
+                                                    <td style="width:100px"> <img alt
                                                         src="images/I4003_2186_4002_1097_52_69.png"
                                                         style="border:0;border-radius:800px;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
-                                                        width="60" height="auto" lp-edit> </td>
+                                                        width="100" height="auto" lp-edit> </td>
                                                   </tr>
                                                 </tbody>
                                               </table>
@@ -2130,8 +2130,8 @@
                                 </tbody>
                               </table>
                             </div>
-                            <!--[if mso | IE]></td><td class="" style="vertical-align:middle;width:576px;" ><![endif]-->
-                            <div class="mj-column-px-576 mj-outlook-group-fix"
+                            <!--[if mso | IE]></td><td class="" style="vertical-align:middle;width:536px;" ><![endif]-->
+                            <div class="mj-column-px-536 mj-outlook-group-fix"
                               style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                               <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                                 <tbody>
@@ -2179,10 +2179,10 @@
             <tbody>
               <tr>
                 <td style="direction:ltr;font-size:0;padding:0;text-align:center">
-                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#D3450D" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                  <div style="background:#D3450D;background-color:#D3450D;margin:0 auto;max-width:700px">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#e84e0f" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                  <div style="background:#e84e0f;background-color:#e84e0f;margin:0 auto;max-width:700px">
                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                      style="background:#D3450D;background-color:#D3450D;width:100%">
+                      style="background:#e84e0f;background-color:#e84e0f;width:100%">
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
@@ -2222,10 +2222,10 @@
                       </tbody>
                     </table>
                   </div>
-                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#D3450D" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                  <div style="background:#D3450D;background-color:#D3450D;margin:0 auto;max-width:700px">
+                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#e84e0f" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                  <div style="background:#e84e0f;background-color:#e84e0f;margin:0 auto;max-width:700px">
                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                      style="background:#D3450D;background-color:#D3450D;width:100%">
+                      style="background:#e84e0f;background-color:#e84e0f;width:100%">
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:0 24px;text-align:center">
@@ -2260,15 +2260,15 @@
                       </tbody>
                     </table>
                   </div>
-                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#D3450D" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                  <div style="background:#D3450D;background-color:#D3450D;margin:0 auto;max-width:700px">
+                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#e84e0f" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                  <div style="background:#e84e0f;background-color:#e84e0f;margin:0 auto;max-width:700px">
                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                      style="background:#D3450D;background-color:#D3450D;width:100%">
+                      style="background:#e84e0f;background-color:#e84e0f;width:100%">
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:24px;text-align:center">
-                            <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:60px;" ><![endif]-->
-                            <div class="mj-column-px-60 mj-outlook-group-fix"
+                            <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:100px;" ><![endif]-->
+                            <div class="mj-column-px-100 mj-outlook-group-fix"
                               style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                               <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                                 <tbody>
@@ -2284,10 +2284,10 @@
                                                 style="border-collapse:collapse;border-spacing:0">
                                                 <tbody>
                                                   <tr>
-                                                    <td style="width:60px"> <img alt
+                                                    <td style="width:100px"> <img alt
                                                         src="images/I4003_2187_4002_1097_52_69.png"
                                                         style="border:0;border-radius:800px;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
-                                                        width="60" height="auto" lp-edit> </td>
+                                                        width="100" height="auto" lp-edit> </td>
                                                   </tr>
                                                 </tbody>
                                               </table>
@@ -2322,8 +2322,8 @@
                                 </tbody>
                               </table>
                             </div>
-                            <!--[if mso | IE]></td><td class="" style="vertical-align:middle;width:576px;" ><![endif]-->
-                            <div class="mj-column-px-576 mj-outlook-group-fix"
+                            <!--[if mso | IE]></td><td class="" style="vertical-align:middle;width:536px;" ><![endif]-->
+                            <div class="mj-column-px-536 mj-outlook-group-fix"
                               style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                               <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                                 <tbody>
@@ -2459,8 +2459,8 @@
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:24px;text-align:center">
-                            <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:60px;" ><![endif]-->
-                            <div class="mj-column-px-60 mj-outlook-group-fix"
+                            <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:100px;" ><![endif]-->
+                            <div class="mj-column-px-100 mj-outlook-group-fix"
                               style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                               <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                                 <tbody>
@@ -2476,10 +2476,10 @@
                                                 style="border-collapse:collapse;border-spacing:0">
                                                 <tbody>
                                                   <tr>
-                                                    <td style="width:60px"> <img alt
+                                                    <td style="width:100px"> <img alt
                                                         src="images/I4003_2188_4002_1097_52_69.png"
                                                         style="border:0;border-radius:800px;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
-                                                        width="60" height="auto" lp-edit> </td>
+                                                        width="100" height="auto" lp-edit> </td>
                                                   </tr>
                                                 </tbody>
                                               </table>
@@ -2514,8 +2514,8 @@
                                 </tbody>
                               </table>
                             </div>
-                            <!--[if mso | IE]></td><td class="" style="vertical-align:middle;width:576px;" ><![endif]-->
-                            <div class="mj-column-px-576 mj-outlook-group-fix"
+                            <!--[if mso | IE]></td><td class="" style="vertical-align:middle;width:536px;" ><![endif]-->
+                            <div class="mj-column-px-536 mj-outlook-group-fix"
                               style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                               <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                                 <tbody>
