--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -108,14 +108,14 @@
         width: 530px !important
       }
 
-      .mj-column-px-60 {
-        max-width: 60px;
-        width: 60px !important
+      .mj-column-px-100 {
+        max-width: 100px;
+        width: 100px !important
       }
 
-      .mj-column-px-576 {
-        max-width: 576px;
-        width: 576px !important
+      .mj-column-px-536 {
+        max-width: 536px;
+        width: 536px !important
       }
 
       .mj-column-px-350 {
@@ -170,14 +170,14 @@
       width: 530px !important
     }
 
-    .moz-text-html .mj-column-px-60 {
-      max-width: 60px;
-      width: 60px !important
+    .moz-text-html .mj-column-px-100 {
+      max-width: 100px;
+      width: 100px !important
     }
 
-    .moz-text-html .mj-column-px-576 {
-      max-width: 576px;
-      width: 576px !important
+    .moz-text-html .mj-column-px-536 {
+      max-width: 536px;
+      width: 536px !important
     }
 
     .moz-text-html .mj-column-px-350 {
@@ -1873,7 +1873,8 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="Agenda">
+      </lp-layout>
+      <lp-layout lp-label="Agenda">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -1980,6 +1981,7 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
+
       <lp-layout lp-label="Quote - Wit">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="margin:0 auto;max-width:700px">
@@ -2151,7 +2153,7 @@
                                             <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                               <div
                                                 style="color:#adb5bd;font-family:Mulish,Arial;font-size:14px;font-weight:400;line-height:16px;text-align:left;text-decoration:none">
-                                                <lp-multiline lp-label="Subtitel"> Functie, Bedrijf</lp-multiline> </div>
+                                                <lp-multiline lp-label="Titel"> Functie, Bedrijf</lp-multiline> </div>
                                             </td>
                                           </tr>
                                         </tbody>
@@ -2343,7 +2345,7 @@
                                             <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                               <div
                                                 style="color:#f6a98a;font-family:Mulish,Arial;font-size:14px;font-weight:400;line-height:16px;text-align:left;text-decoration:none">
-                                                <lp-multiline lp-label="Subtitel"> Functie, Bedrijf</lp-multiline> </div>
+                                                <lp-multiline lp-label="Titel"> Functie, Bedrijf</lp-multiline> </div>
                                             </td>
                                           </tr>
                                         </tbody>
@@ -2535,7 +2537,7 @@
                                             <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                               <div
                                                 style="color:#89a3da;font-family:Mulish,Arial;font-size:14px;font-weight:400;line-height:16px;text-align:left;text-decoration:none">
-                                                <lp-multiline lp-label="Subtitel"> Functie, Bedrijf</lp-multiline> </div>
+                                                <lp-multiline lp-label="Titel"> Functie, Bedrijf</lp-multiline> </div>
                                             </td>
                                           </tr>
                                         </tbody>
@@ -2556,6 +2558,7 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
+
       <lp-layout lp-label="Divider">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
