socials mobile alignment

--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -194,6 +194,10 @@
       td.mj-full-width-mobile {
         width: auto !important
       }
+
+      .socials , .socials td, .socials td a {
+        text-align: left !important;
+      }
     }
   </style>
   <style type="text/css">
@@ -2885,7 +2889,7 @@
                                                     width="100%">
                                                     <tbody>
                                                       <tr>
-                                                        <td align="right"
+                                                        <td class="socials" align="right"
                                                           style="font-size:0;padding:0;word-break:break-word">
                                                           <table cellpadding="0" cellspacing="0" role="presentation"
                                                             width="136" border="0"
