--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -275,7 +275,7 @@
     .lp-toc-link, .lp-toc-link a {
       color:#333f50;
       font-size: inherit !important;
-      font-family: inherit !important;
+      font-family: Mulish,Arial !important;
       font-weight: inherit !important;
       line-height: inherit !important;
       text-align:left;
@@ -482,7 +482,7 @@
         <tbody>
           <tr>
             <td>
-              <!--[if mso | IE]><v:rect style="mso-width-percent:980;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg_light_alt.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+              <!--[if mso | IE]><v:rect style="mso-width-percent:980;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg_light.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
               <div style="margin:0 auto;max-width:700px">
                 <div style="font-size:0;line-height:0">
                   <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
