agenda item mobile sizing

--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -1938,7 +1938,7 @@
                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                       <tbody>
                         <tr>
-                          <td style="background-color:#234793;padding:16px 24px;vertical-align:top">
+                          <td style="background-color:#234793;padding:16px 24px;vertical-align:top;max-width: 106px !important;width: 106px !important;display: inline-block;box-sizing: border-box;">
                             <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                               <tbody>
                                 <tr>
